--- a/WebContent/WEB-INF/global/variable.jspf
+++ b/WebContent/WEB-INF/global/variable.jspf
@@ -5,3 +5,4 @@
 <c:set var="context" value="<%=request.getContextPath() %>"/>
 <c:set var="img" value="${context}/resources/img"/>
 <c:set var="css" value="${context}/resources/css"/>
+<c:set var="js" value="${context}/resources/js"/>
